fixed horizontal scroll bar

--- a/static/css/page-layouts/style.css
+++ b/static/css/page-layouts/style.css
@@ -57,7 +57,7 @@
     display: flex;    
     flex-direction: column;
     flex: 1 1 0px;
-    justify-content: start;
+    justify-content: center;
     width: calc(100vw - 267px);
     background-color: var(--grey-head);
     position: relative;
@@ -67,7 +67,7 @@
 }
 
 .text-card {
-    padding: 32px 72px 0px 72px;
+    padding: 32px 72px 32px 72px;
     margin: 0px;
     display: -webkit-box;
     display: -webkit-flex;
@@ -76,7 +76,6 @@
     flex-direction: column;
     flex: 1 1 0px;
     justify-content: start;
-    width: calc(100vw - 331px);
     background-color: var(--primary);
     height: fit-content;
 }
